Wrapped the card classes in a div with set column sizes so that it will be more responsive over various screen sizes.Custom css no longer needed in this instance.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,3 +2,23 @@ body {
    margin-top: 60px;
    background-color: lightgoldenrodyellow;
 }
+
+/* .card {
+  
+display: inline-block;
+margin-top: 5px;
+margin-left: 30px;
+margin-right: 20px;
+width: 380px;
+height: 550px;
+}
+
+@media only screen and (max-width: 500px) {
+   .card {
+      margin-left: 0px;
+      margin-right: 0px;
+      width: 330px;
+      height: 450px;
+   }
+}
+ */
